css/layout.sidepanel.css
body {
	margin: 0;
	padding: 0;
}

#window-dir {
	float: left;
	position: fixed;
	top: 0px;
	bottom: 0px;
	width: 200px;
	height: 100%;
	overflow-y: auto;
	overflow-x: hidden;
}

#window-dir #dirlist {
	display: block;
}

#window-dir #dirlist, #window-dir #dirlist .dynatree-container {
}

#window-dir ul {
	overflow-x: hidden;
	width: 100%;
}

#window-list {
	left: 206px;
	height: 100%;
	overflow: auto;
	position: fixed;
}

#window-display {
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
}

#window-display #display-frame {
	border: 5px solid blue;
}

#window-throbber {
	position: fixed;
	display: none;
	width: 35px;
	height: 35px;
	z-index: 1000;
	background: black;
	top: 40%;
	left: 50%;
	border-radius: 20px;
	padding: 10px;
}

